--- a/configuration.yaml
+++ b/configuration.yaml
@@ -79,5 +79,6 @@ apple_tv:
     name: "Apple TV"
 
 group: !include_dir_merge_named groups
+zone: !include zones.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
