--- a/groups/tab-ha.yaml
+++ b/groups/tab-ha.yaml
@@ -8,12 +8,10 @@ ha_system:
 raspberry:
   name: Raspberry Pi
   entities:
-    - sensor.cpu
-    - sensor.cpu_use
+    - sensor.cpu_used
     - sensor.ram_free
     - sensor.disk_free_
     - sensor.last_boot
-    - sensor.since_last_boot
     - sensor.since_last_boot_templated
 
 home_assistant:
