--- a/automations.yaml
+++ b/automations.yaml
@@ -1,1 +1,20 @@
-[]
+- id: turn_on_mood_lights
+  alias: Turn on mood lights when sun sets
+  hide_entity: False
+  trigger:
+    platform: sun
+    event: sunset
+    offset: "-00:00:00"
+  action:
+    service: homeassistant.turn_on
+    entity_id: switch.fibaro_system_fgwpef_wall_plug_switch
+
+- id: turn_off_mood_lights
+  alias: Turn off mood lights
+  hide_entity: False
+  trigger:
+    platform: time
+    at: '22:00:00'
+  action:
+    service: homeassistant.turn_off
+    entity_id: switch.fibaro_system_fgwpef_wall_plug_switch
