--- a/groups/tab-upstairs.yaml
+++ b/groups/tab-upstairs.yaml
@@ -28,6 +28,7 @@ bathroom:
 bedroom2:
   name: Slaapkamer Elise
   entities:
+    - camera.kids_room
     - light.babykamer
     - group.bedroom2_hue_lighting
     - sensor.babykamer_temperature
