--- a/customizations/zwave/fibaro/fgwpe_wall_plug_power.yaml
+++ b/customizations/zwave/fibaro/fgwpe_wall_plug_power.yaml
@@ -2,16 +2,15 @@
 
 switch.fibaro_system_fgwpef_wall_plug_switch:
   friendly_name: Woonkamer - Stolplamp
+  homebridge_visible: true
   homebridge_name: Sfeerverlichting
 
 sensor.fibaro_system_fgwpef_wall_plug_energy:
   friendly_name: Woonkamer - Stolplamp - kWh Meter
   hidden: true
-  homebridge_hidden: true
 
 sensor.fibaro_system_fgwpef_wall_plug_power:
   friendly_name: Woonkamer - Stolplamp - Verbruik
 
 sensor.fibaro_system_fgwpef_wall_plug_distance:
   hidden: true
-  homebridge_hidden: true
