--- a/customizations/zwave/fibaro/fgs211_double_relay_switch.yaml
+++ b/customizations/zwave/fibaro/fgs211_double_relay_switch.yaml
@@ -2,11 +2,9 @@
 switch.fibaro_system_fgs221_double_relay_switch_2x15kw_switch:
   friendly_name: Woonkamer - Lampen (Ongebruikt)
   hidden: true
-  homebridge_hidden: true
 
 #FIBARO System FGS221 Double Relay Switch 2x1.5kW Switch
 switch.fibaro_system_fgs221_double_relay_switch_2x15kw_switch_2:
   friendly_name: Woonkamer - Lampen
-  hidden: false
-  homebridge_hidden: false
+  homebridge_visible: true
 
