--- a/customizations/zwave/greenwave/powernode_6_kantoor.yaml
+++ b/customizations/zwave/greenwave/powernode_6_kantoor.yaml
@@ -3,149 +3,174 @@
 sensor.greenwave_powernode_6_kantoor_energy:
   friendly_name: Kantoor - PowerNode - Schermen - kWh Meter
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_power:
   friendly_name: Kantoor - PowerNode - Schermen - Verbruik
   hidden: false
-  homebridge_hidden: false
 
 switch.greenwave_powernode_6_kantoor_switch:
   friendly_name: Kantoor - PowerNode - Schermen
   hidden: false
-  homebridge_hidden: true
+  homebridge_visible: true
 
 # GreenWave PowerNode 6 - Kantoor - Port 2
 
 sensor.greenwave_powernode_6_kantoor_energy_2:
   friendly_name: Kantoor - PowerNode - Port 2 - kWh Meter
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_power_2:
   friendly_name: Kantoor - PowerNode - Port 2 - Verbruik
   hidden: true
-  homebridge_hidden: true
 
 switch.greenwave_powernode_6_kantoor_switch_2:
   friendly_name: Kantoor - PowerNode - Port 2
   hidden: true
-  homebridge_hidden: true
 
 # GreenWave PowerNode 6 - Kantoor - Port 3
 
 sensor.greenwave_powernode_6_kantoor_energy_3:
   friendly_name: Kantoor - PowerNode - Port 3 - kWh Meter
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_power_3:
   friendly_name: Kantoor - PowerNode - Port 3 - Verbruik
   hidden: true
-  homebridge_hidden: true
 
 switch.greenwave_powernode_6_kantoor_switch_3:
   friendly_name: Kantoor - PowerNode - Port 3
   hidden: true
-  homebridge_hidden: true
 
 # GreenWave PowerNode 6 - Woonkamer - Port 4
 
 sensor.greenwave_powernode_6_kantoor_energy_4:
   friendly_name: Kantoor - PowerNode - PC - kWh Meter
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_power_4:
   friendly_name: Kantoor - PowerNode - PC - Verbruik
   hidden: false
-  homebridge_hidden: false
 
 switch.greenwave_powernode_6_kantoor_switch_4:
   friendly_name: Kantoor - PowerNode - PC
-  hidden: false
-  homebridge_hidden: true
+  homebridge_visible: true
 
 # GreenWave PowerNode 6 - Kantoor - Port 5
 
 sensor.greenwave_powernode_6_kantoor_energy_5:
   friendly_name: Kantoor - PowerNode - Port 5 - kWh Meter
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_power_5:
   friendly_name: Kantoor - PowerNode - Port 5 - Verbruik
   hidden: true
-  homebridge_hidden: true
 
 switch.greenwave_powernode_6_kantoor_switch_5:
   friendly_name: Kantoor - PowerNode - Port 5
   hidden: true
-  homebridge_hidden: true
 
 # GreenWave PowerNode 6 - Woonkamer - Port 6
 
 sensor.greenwave_powernode_6_kantoor_energy_6:
   friendly_name: Kantoor - PowerNode - Speakers - kWh Meter
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_power_6:
   friendly_name: Kantoor - PowerNode - Speakers - Verbruik
   hidden: false
-  homebridge_hidden: false
 
 switch.greenwave_powernode_6_kantoor_switch_6:
   friendly_name: Kantoor - PowerNode - Speakers
-  hidden: false
-  homebridge_hidden: true
+  homebridge_visible: true
 
 ### Remove Previous Reading Sensors
 
 sensor.greenwave_powernode_6_kantoor_previous_reading:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_2:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_3:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_4:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_5:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_6:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_7:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_8:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_9:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_10:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_11:
   hidden: true
-  homebridge_hidden: true
 
 sensor.greenwave_powernode_6_kantoor_previous_reading_12:
   hidden: true
-  homebridge_hidden: true
+
+sensor.greenwave_powernode_6_kantoor_exporting:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_exporting_2:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_exporting_3:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_exporting_4:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_exporting_5:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_exporting_6:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_2:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_3:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_4:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_5:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_6:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_7:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_8:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_9:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_10:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_11:
+  hidden: true
+
+sensor.greenwave_powernode_6_kantoor_interval_12:
+  hidden: true
