--- a/platforms/binary_sensors/zwave/pst02a_4_in_1_multisensor.yaml
+++ b/platforms/binary_sensors/zwave/pst02a_4_in_1_multisensor.yaml
@@ -1,16 +1,16 @@
 - platform: template
   sensors:
-    philio_technology_corporation_pst02a_4_in_1_multisensor_access:
-      value_template: '{{ is_state("sensor.philio_technology_corporation_pst02a_4_in_1_multisensor_access_control", "22") }}'
+    pst02a_kantoor_access:
+      value_template: '{{ is_state("sensor.pst02a_kantoor_access_control", "22") }}'
       device_class: opening
-      entity_id: sensor.philio_technology_corporation_pst02a_4_in_1_multisensor_access_control
+      entity_id: sensor.pst02a_kantoor_access_control
 
-    philio_technology_corporation_pst02a_4_in_1_multisensor_motion:
-      value_template: '{{ is_state("sensor.philio_technology_corporation_pst02a_4_in_1_multisensor_burglar", "8") }}'
+    pst02a_kantoor_motion:
+      value_template: '{{ is_state("sensor.pst02a_kantoor_burglar", "8") }}'
       device_class: motion
-      entity_id: sensor.philio_technology_corporation_pst02a_4_in_1_multisensor_burglar
+      entity_id: sensor.pst02a_kantoor_burglar
 
-    philio_technology_corporation_pst02a_4_in_1_multisensor_tamper:
-      value_template: '{{ is_state("sensor.philio_technology_corporation_pst02a_4_in_1_multisensor_burglar", "3") }}'
+    pst02a_kantoor_tamper:
+      value_template: '{{ is_state("sensor.pst02a_kantoor_burglar", "3") }}'
       device_class: safety
-      entity_id: sensor.philio_technology_corporation_pst02a_4_in_1_multisensor_burglar
+      entity_id: sensor.pst02a_kantoor_burglar
