--- a/platforms/sensors/systemmonitor.yaml
+++ b/platforms/sensors/systemmonitor.yaml
@@ -5,6 +5,18 @@
     - type: memory_free
     - type: processor_use
     - type: last_boot
+    - type: network_in
+      arg: eth0
+    - type: network_out
+      arg: eth0
+    - type: packets_in
+      arg: eth0
+    - type: packets_out
+      arg: eth0
+    - type: ipv4_address
+      arg: eth0
+    - type: ipv6_address
+      arg: eth0
     - type: since_last_boot
 
 - platform: template
